更新了底部footer，友链、关于、标签页面的前后端整体完成，修复了一些小BUG

--- a/src/main/resources/static/css/archive.css
+++ b/src/main/resources/static/css/archive.css
@@ -11,7 +11,7 @@
     list-style-type:none;
     width:100%;
     font-family: "xionghaizi";
-    color: orchid;
+    color: lightskyblue;
 }
 
 #art-list {
