--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../static/live2d/css/waifu.css" />
     <link href="../static/css/article.css" rel="stylesheet"/>
 
-    <link href="../static/css/login.css" rel="stylesheet"/>
+    <link href="../static/css/register.css" rel="stylesheet"/>
 </head>
 <body>
 <div id="main-class-text">
@@ -126,7 +126,7 @@
 <script type="text/javascript" src="https://npmcdn.com/headroom.js@0.9.3/dist/headroom.min.js"></script>
 <!-- 主页JS -->
 <script src="../static/js/main.js" type="text/javascript"></script>
-<script src="../static/js/login.js" type="text/javascript"></script>
+<script src="../static/js/register.js" type="text/javascript"></script>
 <!-- 背景线条 -->
 <script type="text/javascript" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>　
 
