注册功能前后端基本完成（差注册成功后台）

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -86,7 +86,7 @@
             <div class="am-form-group">
                 <div class="am-u-sm-10 am-u-sm-offset-2">
                     <button type="submit" id="loginFormBtn" class="article-button article-btn am-btn am-btn-default">进&nbsp;&nbsp;&nbsp;&nbsp;店</button>
-                    <input class="article-button article-btn am-btn am-btn-primary am-btn-sm am-fl no_submit" id="registerUpdateFormBtn" style="border-radius: 5px" type="button" value="登&nbsp;&nbsp;&nbsp;&nbsp;记">
+                    <input class="article-button article-btn am-btn am-btn-primary am-btn-sm am-fl no_submit" id="registerUpdateFormBtn" style="border-radius: 5px" type="button" value="忘记密码">
                 </div>
             </div>
         </form>
